# IOT

./: CMakeLists.txt  CONTRIBUTING.md  DOCUMENTATION.md  Documentation.md  LICENSE  README.md  main.cpp  main.h  polygon.cpp  polygon.h  readfile.cpp  readfile.h  sfml.cpp  test2.txt  tests.cpp  window.ui
SFML/include/SFML/Window/: VideoMode.hpp
SFML/src/SFML/Window/: VideoMode.cpp
google/googlemock/include/gmock/: gmock-matchers.h
google/googletest/cmake/: internal_utils.cmake
qt_files/: qt_graphic.cpp  qt_graphic.h  qt_graphic.ui
src/: file_manager.cpp  file_manager.h  main.cpp  polygon.cpp  polygon.h  readfile.cpp  readfile.h  sfml.cpp  sfml.h  test2.txt
tests/: test_main.cpp  test_polygon.cpp  test_readfile.cpp
